# MSE-CAPSTONE-PROJECT

./: .gitignore  BASELINE_COMPLETE.md  BASELINE_EXPERIMENTS_DELIVERY.md  BASELINE_EXPERIMENTS_INDEX.md  BASELINE_EXPERIMENT_REPORT.md  BASELINE_FLOWCHART.md  BASELINE_SUMMARY.md  DOCUMENTATION_INDEX.md  FUSION_COMPLETE.md  FUSION_IMPROVEMENTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  README_BASELINE.md  TRAINING_GUIDE.md  notebook_baseline_comparison.ipynb  pyproject.toml  requirements.txt  setup.cfg  test_dataloader.py  test_models.py  verify_baseline.py  verify_pipeline.py
outputs/: comparison_20260228_230047.json
outputs/finetune_20260228_232547/: events.out.tfevents.1772295949.DESKTOP-5DO5L1M.5752.0
outputs/finetune_20260228_233325/: events.out.tfevents.1772296408.DESKTOP-5DO5L1M.12604.0  finetuned_epoch_1.pt  finetuned_epoch_3.pt  finetuned_epoch_5.pt  finetuned_epoch_7.pt
scripts/: baseline_experiment.py  compare_modalities.py  model_check.py  run_pipeline.py  train.py
src/: __init__.py
src/gan/: __init__.py
src/models/: __init__.py  eeg_encoder.py
src/preprocessing/: __init__.py  data_loader.py  eeg.py  speech.py
src/utils/: __init__.py  training.py
tests/: test_models.py  test_preprocessing.py
